# integrity-code-series-week9-cui

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  EXECUTION_ORDER.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_all.py  week9_brief_latex.html
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  physics_question.yml
.github/workflows/: ci.yml  release.yml
docs/: equations.html
notebooks/: week9_cui_exploration.ipynb
src/: __init__.py  audit_chain.py  constants.py  coupled_solver.py  electrochemistry.py  fad_assessment.py  geometry.py  inverse_problem.py  moisture_field.py  monte_carlo.py  surrogate_gbr.py  thermal_field.py
tests/: test_extended.py  test_geometry_thermal.py  test_moisture_electrochemistry.py  test_remaining.py
validation/: benchmarks.py
visualization/: generate_gif.py  plot_analysis.py  plot_fields.py  plot_mc_dist.py
